<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenderActivity"
    android:gravity="center"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rg"
        android:layout_below="@id/textView"

        >

        <RadioButton
            android:id="@+id/radiofemale"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rg"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/female"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radiomale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radiofemale"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/male"
            android:textStyle="bold" />

    </RadioGroup>

    <Button
        android:id="@+id/Back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="67dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/back"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/Next2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Back2"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-48dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/next"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>