<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DOB_Comment"
    android:gravity="center"
    >

    <EditText
        android:id="@+id/date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg"
        android:background="#d4d4d4"
        android:hint="@string/selectdob"
        android:padding="10dp"
        android:textColor="#897"
        android:textColorHint="#090"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date"
        android:layout_marginTop="50dp"
        android:text="@string/comment"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editComment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/textView2"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/Writesomething"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editComment"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="158dp"
        android:layout_marginTop="58dp"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:text="@string/register"
        android:textColor="#fff"
        android:textStyle="bold" />



</RelativeLayout>